2003-11-15  Todd Berman  <tberman@gentoo.org>
	
	* gacutil.cs: Added reference counting for installation and deletion.
	An assembly will have a RefCount of 1 if --force is used.
	* gacutil.cs: Changed ... + Path.DirSepChar + ... to Path.Combine
	Thanks to Ben Maurer. Turns out code marked as potentially not
	needed was not needed, now refcounting with /u assemblyname works
	as well.
	* gacutil.cs: Incorporated uac (User Assembly Cache), needs some
	machine.config security checking as well.

2003-11-14  Todd Berman  <tberman@gentoo.org>

	* gacutil.cs: added proper removal of assemblies, now the version=
	syntax also works.
	* gacutil.exe: somehow got added, removing, duh.

2003-11-12  Todd Berman  <tberman@gentoo.org>

	* Makefile:
	* TODO:
	* README:
	* ChangeLog: 
	* gacutil.exe.sources:
	* gacutil.cs: Added